Avoid dropdown menu to be truncated inside a column with scrolling

--- a/assets/css/src/dropdown.css
+++ b/assets/css/src/dropdown.css
@@ -10,9 +10,8 @@
 ul.dropdown-submenu-open {
     display: block;
     position: absolute;
-    left: 0;
     z-index: 1000;
-    min-width: 280px;
+    min-width: 285px;
     list-style: none;
     margin: 3px 0 0 1px;
     padding: 6px 0;
@@ -22,21 +21,19 @@ ul.dropdown-submenu-open {
     box-shadow: 0px 1px 3px rgba(0,0,0,0.15);
 }
 
-ul.dropdown-submenu-top {
-    bottom: 0;
-}
-
 .dropdown-submenu-open li {
     display: block;
+    margin: 0;
     padding: 0;
     padding-left: 10px;
     padding-right: 10px;
-    margin: 0;
-    line-height: 30px;
+    line-height: 33px;
+    font-size: 0.85em;
+    border-bottom: 1px solid #f8f8f8;
 }
 
-.dropdown-submenu-open a {
-    font-weight: normal;
+.dropdown-submenu-open li:last-child {
+    border: none;
 }
 
 .page-header .dropdown {
